# OrangeRadio

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build-installer-mac.sh  build-installer.ps1  run.ps1
.github/workflows/: ci.yml  release.yml
.harness/: agent.md
.harness/docs/: code-standards.md
.harness/memory/: MEMORY.md
.harness/reins/ai-expert/: agent.md
.harness/reins/designer/: agent.md
.harness/reins/frontend-expert/: agent.md
.harness/reins/pm/: agent.md
.harness/reins/rust-expert/: agent.md
.harness/reins/server-expert/: agent.md
.harness/reins/tester/: agent.md
.harness/reins/user-advocate/: agent.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/demo/: README.md  track.lrc
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/orange-ai/: Cargo.toml
crates/orange-ai/src/: lib.rs  lyrics.rs  provider.rs  recommend.rs  voice.rs
crates/orange-audio/: Cargo.toml
crates/orange-audio/src/: beatmap.rs  decoder.rs  dsp.rs  lib.rs  mixer.rs  spectrum.rs
crates/orange-core/: Cargo.toml
crates/orange-core/src/: audio_format.rs  error.rs  events.rs  lib.rs  player.rs  recommendation.rs  source.rs  track.rs  wallpaper_engine.rs
crates/orange-hue/: Cargo.toml
crates/orange-hue/src/: lib.rs
crates/orange-library/: Cargo.toml
crates/orange-library/src/: database.rs  fingerprint.rs  lib.rs  metadata.rs  scanner.rs
crates/orange-sources/: Cargo.toml
crates/orange-sources/src/: auth_store.rs  gequbao.rs  http_client.rs  kugou.rs  kuwo.rs  lib.rs  local.rs  netease.rs  podcast.rs  qishui.rs  qqmusic.rs  spotify.rs  weapi.rs  web_radio.rs
crates/orange-studio/: Cargo.toml
crates/orange-studio/src/: composition.rs  lib.rs  lyrics.rs  minimax.rs  project.rs  provider.rs  render.rs  stems.rs  vocal.rs
crates/orange-sync/: Cargo.toml
crates/orange-sync/src/: cast.rs  handoff.rs  lib.rs
crates/orange-tauri/: Cargo.toml
crates/orange-tauri/src/: commands.rs  lib.rs  wallpaper_engine.rs
docs/: 01-技术架构.md  02-使用手册.md  03-开发文档.md  04-API设计.md  05-音源插件开发指南.md  06-创作工作室指南.md  07-Roadmap.md  08-产品规划.md  09-开发计划.md  10-Mineradio深度调研.md  10-全屏播放页UI重构.md  11-播放队列优化.md  12-性能优化记录.md  13-macos-build-guide.md  14-推荐系统与LLM接入.md  15-代码签名与CI发布.md  16-性能优化审查与待办.md  17-音源补全与Studio增强.md  AI-功能与空壳现状盘点.md
docs/superpowers/plans/: 2026-07-05-wallpaper-engine-scanner.md  2026-07-05-wallpaper-visual-redesign.md
docs/superpowers/specs/: 2026-07-05-desktop-lyrics-design.md  2026-07-05-wallpaper-engine-scanner-design.md  2026-07-05-wallpaper-visual-redesign-design.md  2026-07-06-electron-orangeradio-design.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/wallpapers/: README.md  manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CloseConfirmDialog.tsx  ConsoleSearch.tsx  EmptyState.tsx  HotkeysModal.tsx  LayoutControls.tsx  OrangeRadioLogo.tsx  ProfilePanel.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.tsx  SpectrumPulse.tsx  TitleBar.tsx  Toast.css  Toast.tsx  TrackRow.tsx  VirtualGrid.tsx  WallpaperEngineGrid.tsx  WallpaperPicker.tsx  WindowControls.tsx  close-confirm-dialog.css  layout-controls.css  profile-panel.css  wallpaper-engine.css  window-controls.css
frontend/src/features/player/: AddToPlaylistDialog.tsx  CommentList.tsx  FullPlayer.tsx  FullPlayerRightDrawer.tsx  GequbaoView.tsx  HeroSpectrum.tsx  HomeView.tsx  ImmersiveView.tsx  KugouView.tsx  KuwoView.tsx  LibraryView.tsx  NeteaseView.tsx  PlayerBar.tsx  PlayerView.tsx  PodcastView.tsx  ProgressParticles.tsx  QishuiView.tsx  QqMusicView.tsx  QueuePanel.tsx  RadioView.tsx  RightWaveFlow.tsx  SearchView.tsx  Splash.tsx  SpotifyView.tsx  TrackActions.tsx  UserPlaylistView.tsx  VisualConsole.tsx  WallpaperView.tsx  layoutOptions.ts  playbackModes.tsx  splash.css  useAudioEngine.ts  useBeatDetector.ts  useCover.ts  useDominantColor.ts  useLyricBridge.ts  useLyricMotion.ts  useLyrics.ts
frontend/src/features/player/immersive/: ImmersiveBackground.tsx  ImmersiveControls.tsx
frontend/src/features/social/: SocialView.tsx
frontend/src/features/studio/: MultiTrackPlayer.tsx  StudioView.tsx
frontend/src/hooks/: useInfiniteScroll.ts  useVisibleRaf.ts
frontend/src/lib/: beatCam.ts  comboCapabilities.ts  fxArchive.ts  hotkeys.ts  listenTogether.ts  llmConfig.ts  lyricWindow.ts  playback.ts  studio.ts  wallpaperEngine.ts  wallpaperUpload.ts  webviewUrl.ts
frontend/src/lyric-overlay/: LyricOverlay.css  LyricOverlay.tsx
frontend/src/stores/: libraryStore.ts  playerStore.ts  searchStore.ts  spectrumBus.ts  studioStore.ts  wallpaperStore.ts
frontend/src/styles/: app.css  full-player.css  glass.css  global.css  home.css  hotkeys-modal.css  immersive.css  library.css  player-bar.css  player.css  queue-panel.css  right-drawer.css  sidebar.css  studio.css  titlebar.css  wallpaper-picker.css  wallpaper.css
frontend/src/visual/: BeatParticles.tsx  BloomLayer.tsx  CoverParticles.tsx  LyricStage3D.tsx  PlaylistShelf.tsx  PresetStage.tsx  SplashStarfield.tsx  StarRiver.tsx  VinylRecord.tsx  VisualBackground.tsx  WallpaperBackground.tsx  WallpaperLayer.tsx
scripts/: copy-bundle.ps1
server/: Cargo.toml
server/src/: main.rs  routes.rs
