[package]
name = "orangeradio-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
