[package]
name = "orange-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orange-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
symphonia.workspace = true
