[package]
name = "orange-library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orange-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
lofty = "0.21"
walkdir = "2"
parking_lot.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
