[package]
name = "orange-sources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orange-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
quick-xml = "0.36"
chrono.workspace = true
