[package]
name = "orange-sources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orange-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
quick-xml = "0.36"
chrono.workspace = true
aes = "0.8"
cbc = "0.1"
base64.workspace = true
rand.workspace = true
aes-gcm.workspace = true
keyring.workspace = true
md5.workspace = true
rsa = "0.9"
hex = "0.4"
sha1 = "0.10"
num-bigint = "0.4"
scraper.workspace = true
