[package]
name = "orange-studio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orange-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
