[package]
name = "orange-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orange-core.workspace = true
tauri = { version = "2", features = [] }
orange-audio.workspace = true
orange-library.workspace = true
orange-sources.workspace = true
orange-ai.workspace = true
orange-studio.workspace = true
orange-sync.workspace = true
orange-hue.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true
